Fix z-index

--- a/src/scss/modules/_main-header.scss
+++ b/src/scss/modules/_main-header.scss
@@ -1,19 +1,3 @@
-section:target {
-  border-top: 60px solid transparent;
-  margin-top: -60px;
-  position: relative;
-  z-index: -1;
-
-  @include mediaquery('gt-small') {
-    border-top: 78px solid transparent;
-    margin-top: -78px;
-  }
-  @include mediaquery('gt-medium') {
-    border-top: 92px solid transparent;
-    margin-top: -92px;
-  }
-}
-
 .main-header {
   width: 100%;
   position: relative;
